ecmascript/parser/tests/test262-error-references/fail/f0650722451fd802.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/f0650722451fd802.js:1:1
  |
1 | '\03
  | ^^^^

